--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -100,7 +100,7 @@
 
       {# edit on gitlab #}
       {% set inputPath = inputPath|replace('./super-blog-content/', '') %}
-      <a href="https://gitlab.com/giuliach/super-blog-content/-/blob/master/{{ inputPath }}"><small>Edit this page on GitLab</small></a>
+      <a href="https://gitlab.com/giuliach/super-blog-content/-/blob/master/{{ inputPath }}" target="_blank" rel="noopener"><small>Edit this page on GitLab</small></a>
 
       {# tags #}
       {% if tags %}
