--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -33,7 +33,7 @@
 }
 </script> #}
 
-<article class="c-card {{ modifiers }} {{ mainTag }} {% if card.spacingClass %}{{ card.spacingClass }}{% endif %}" itemscope>
+<article class="c-card {{ modifiers }} {{ mainTag }} {% if card.spacingClass %}{{ card.spacingClass }}{% endif %}">
   {% if card.hasImg and card.data.mainTag %}
     <div class="c-card__img-wrapper">
       {# check if SVG exists, otherwise 11ty build explodes! #}
@@ -49,16 +49,13 @@
     <span class="c-card__number">#{{ card.number }}</span>
     {% endif %}
     {# title and link #}
-    {% if card.data.externalUrl %}
-      {% set cardUrl = card.data.externalUrl %}
-    {% else %}
-      {% set cardUrl = entry.url | url %}
-    {% endif %}
-    <a class="c-card__title" href="{{ cardUrl }}" {% if card.data.externalUrl %}target="_blank" rel="noopener"{% endif %}>
+    <a class="c-card__title" href="{{ entry.url | url }}">
       <h2 class="c-card__title-heading">{{ card.data.title }}</h2>
     </a>
     {% if card.data.externalUrl %}
-      {% include global.svgoPath + 'external-link.svg' %}
+      <a class="c-card__external-icon" href="{{ card.data.externalUrl }}" title="go to external link for {{ card.data.title }}" target="_blank" rel="noopener">
+        {% include global.svgoPath + 'external-link.svg' %}
+      </a>
     {% endif %}
 
     {# abstract #}
