--- a/_includes/layouts/partials/cards-grid.njk
+++ b/_includes/layouts/partials/cards-grid.njk
@@ -1,4 +1,4 @@
-{% if categoryFilter == 'tutorials' %}
+{% if categoryHome == 'tutorials' %}
   <div class="o-cards-grid">
     {%- include "_includes/layouts/partials/cards.njk" %}
   </div>
