feat: add print CSS

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -40,6 +40,8 @@
 
     {# css #}
     <link rel="stylesheet" href="/css/css-bundle.css">
+    {# print css #}
+    <link rel="stylesheet" type="text/css" href="/super-styleguide/src/css/print.css" media="print">
 
     {# critical css #}
     {# capture the CSS content as a Nunjucks variable #}
