--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -123,7 +123,7 @@
       {% endif %}
 
       {% if category !== 'projects' %}
-      <div class="o-distributed o-distributed--center l-spacing-l">
+      <div class="s-next-post-button o-distributed o-distributed--center l-spacing-l">
         <a class="c-button" href="{{ goToPost.url | url }}">Take me to the next post!</a>
       </div>
       {% endif %}
