--- a/_generate/table-of-content/table-of-content.njk
+++ b/_generate/table-of-content/table-of-content.njk
@@ -2,6 +2,7 @@
 title: Table of contents
 layout: layouts/base.njk
 paletteColor: 3
+eleventyExcludeFromCollections: true
 ---
 
 {% block content %}
