feat: add no-js logic

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-js">
   <head>
     {# IMPORTANT: we have to check localStorage as soon as page loads to prevent flickering #}
     <script>
