Resolve "Splittare i file JS e farne uno grosso come bundle"

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -95,7 +95,7 @@
     {% if category === 'tutorials' or categoryHome === 'til' %}
     <script defer src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
     {% endif %}
-    <script defer src="/js/js-bundle.js"></script>
+    <script defer src="/dist/js/bundle.js"></script>
     {# JS #}
   </body>
 </html>
