feat: add canonical url

--- a/_includes/layouts/meta.njk
+++ b/_includes/layouts/meta.njk
@@ -8,6 +8,7 @@
 {# SEO #}
 <meta name="description" content="{{ abstract or subtitle }}">
 <meta name="author" content="Giulia Chiola">
+<link rel="canonical" href="https://giuliachiola.dev{{ page.url | url }}" />
 
 {# og #}
 <meta property="og:title" content="{{ title or renderData.title | striptags }}">
