feat: add meta variables in global.js file

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,7 +10,7 @@
     {# info #}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title or renderData.title | striptags }} | Giulia Chiola</title>
+    <title>{{ title or renderData.title | striptags }} | {{ global.authorName }}</title>
     {# search engine #}
     <meta name="robots" content="index,follow"><!-- All Search Engines -->
     {# archive #}
