feat: add google verification under dotenv

--- a/google-verification.njk
+++ b/google-verification.njk
@@ -1,5 +1,5 @@
 ---
-permalink: /googlebca1d976d47f547d.html
+permalink: /{{ global.googleVerification }}.html
 eleventyExcludeFromCollections: true
 ---
-google-site-verification: googlebca1d976d47f547d.html
+google-site-verification: {{ global.googleVerification }}.html
