feat: add skip to main content

--- a/_includes/layouts/partials/header.njk
+++ b/_includes/layouts/partials/header.njk
@@ -2,7 +2,7 @@
 
 <header class="c-header">
   {# skip to main content #}
-  <a class="skip-to-content-link" href="#main">
+  <a class="s-skip-to-content-link" href="#main">
     Skip to content
   </a>
 
