feat: add id=main for using skip to content

--- a/_includes/layouts/items-list.njk
+++ b/_includes/layouts/items-list.njk
@@ -26,7 +26,7 @@ Please pay attention to the 'reverse' keyword 🤯
   {% set list = arr|filterByCategory(categoryHome) %}
 {% endif %}
 
-<main class="l-main">
+<main id="main" class="l-main">
   {# filters #}
   <div class="l-spacing-m">
     {%- include "_includes/layouts/partials/filters.njk" %}
