--- a/search.njk
+++ b/search.njk
@@ -11,7 +11,7 @@ eleventyNavigation:
 
 {% block content %}
 
-<main class="l-main l-spacing-l">
+<main id="main" class="l-main l-spacing-l">
   <form class="c-form o-distributed o-distributed--center l-spacing-l l-spacing-top-m">
     <label class="c-form__label" for="search_id">Search...</label>
     <input class="c-form__input j-search__input" type="search" value="" id="search_id" placeholder="Search...">
