--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -17,8 +17,8 @@
         <a class="c-footer__link" href="https://codepen.com/giuliachiola" target="_blank" rel="noopener" title="codepen">
           {% include global.svgoPath + 'codepen.svg' %}
         </a>
-        <a class="c-footer__link" href="https://gitlab.com/giuliachiola" target="_blank" rel="noopener" title="gitlab">
-          {% include global.svgoPath + 'gitlab.svg' %}
+        <a class="c-footer__link" href="https://www.instagram.com/giulia_chiola/" target="_blank" rel="noopener" title="gitlab">
+          {% include global.svgoPath + 'instagram.svg' %}
         </a>
       </div>
     </div>
