fix: update search archive path

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,7 +14,7 @@
     {# search engine #}
     <meta name="robots" content="index,follow"><!-- All Search Engines -->
     {# archive #}
-    <link rel="archives" href="{{ global.siteUrl | url }} + '/search'">
+    <link rel="archives" href="{{ global.siteUrl | url }}/search">
     {# theme color #}
     {% set lightenColors = [
       '#f37694',
