feat: update post bottom section

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -92,7 +92,7 @@
         {% if crossPostDEV and crossPostHashnode %}
         <p>
           Comment on
-          <a href="{{ crossPostDEV }}" target="_blank" rel="noopener">DEV</a>
+          <a href="{{ crossPostDEV }}" target="_blank" rel="noopener">DEV.to</a>
           or
           <a href="{{ crossPostHashnode }}" target="_blank" rel="noopener">Hashnode</a>
         </p>
