feat: add table of content page link in search

--- a/search.njk
+++ b/search.njk
@@ -27,6 +27,8 @@ eleventyNavigation:
   </ul>
 
   <h2 class="j-search__no-results u-hidden">Oh no!<br>There are no awesome posts with this keyword 💔</h2>
+
+  <a href="{{ global.siteUrl | url }}/table-of-contents">Go to the table of contents page.</a>
 </main>
 
 {% endblock %}
