--- a/table-of-contents.njk
+++ b/table-of-contents.njk
@@ -1,5 +1,6 @@
 ---
 title: Table of contents
+subtitle: List of all posts and projects in this blog.
 layout: layouts/base.njk
 paletteColor: 3
 permalink: /table-of-contents/
