--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -5,7 +5,7 @@
         {%- include "_includes/layouts/partials/theme-switcher.njk" %}
       </div>
 
-      <p class="c-footer__copyright">© 2022 made with <span>♥️</span> by Giulia Chiola</p>
+      <p class="c-footer__copyright">© {% currentYear %} made with <span>♥️</span> by Giulia Chiola</p>
 
       <div class="c-footer__socials">
         <a class="c-footer__link" href="https://twitter.com/giulia_chiola" target="_blank" rel="noopener" title="twitter">
